--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "org.benjinus.pdfium"
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
     buildTypes {
         release {
